--- a/.github/workflows/deploy-qa.yml
+++ b/.github/workflows/deploy-qa.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/my-app:${{ github.event.pull_request.number }}
+      IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/hydrocore-api:${{ github.event.pull_request.number }}
 
     steps:
       - uses: actions/checkout@v3
