--- a/.github/workflows/deploy-qa.yml
+++ b/.github/workflows/deploy-qa.yml
@@ -9,11 +9,14 @@ jobs:
     if: github.event.label.name == 'deploy-qa'
     runs-on: ubuntu-latest
 
-    env:
-      IMAGE_NAME: ghcr.io/${{ toLower(github.repository_owner) }}/hydrocore-api:${{ github.event.pull_request.number }}
-
     steps:
       - uses: actions/checkout@v3
+
+      - name: Set lowercase image name
+        id: vars
+        run: |
+          owner_lower=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+          echo "image_name=ghcr.io/${owner_lower}/hydrocore-api:${{ github.event.pull_request.number }}" >> $GITHUB_OUTPUT
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
@@ -23,10 +26,10 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build Docker image
-        run: docker build -t $IMAGE_NAME .
+        run: docker build -t ${{ steps.vars.outputs.image_name }} .
 
       - name: Push Docker image
-        run: docker push $IMAGE_NAME
+        run: docker push ${{ steps.vars.outputs.image_name }}
 
       - name: Trigger Render QA Deploy
         env:
@@ -35,4 +38,4 @@ jobs:
           curl -X PATCH https://api.render.com/v1/services/srv-d2hjn5q4d50c739g1ejg \
           -H "Authorization: Bearer $RENDER_API_KEY" \
           -H "Content-Type: application/json" \
-          -d "{\"dockerImage\":\"$IMAGE_NAME\"}"
+          -d "{\"dockerImage\":\"${{ steps.vars.outputs.image_name }}\"}"
