--- a/.github/workflows/deploy-qa.yml
+++ b/.github/workflows/deploy-qa.yml
@@ -12,18 +12,16 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set lowercase image name
+      - name: Set image name
         id: vars
         run: |
-          owner_lower=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
-          echo "image_name=ghcr.io/${owner_lower}/hydrocore-api:${{ github.event.pull_request.number }}" >> $GITHUB_OUTPUT
+          echo "image_name=docker.io/${{ secrets.DOCKERHUB_USERNAME }}/hydrocore-api:${{ github.event.pull_request.number }}" >> $GITHUB_OUTPUT
 
-      - name: Log in to GitHub Container Registry
+      - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build Docker image
         run: docker build -t ${{ steps.vars.outputs.image_name }} .
