--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-SPRING_DATASOURCE_URL=
-SPRING_DATASOURCE_USERNAME=
-SPRING_DATASOURCE_PASSWORD=
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=meubanco
+DB_USER=hydrocore
+DB_PASSWORD=segundoano
