--- a/application.yml
+++ b/application.yml
@@ -1,35 +1,11 @@
 spring:
-  config:
-    activate:
-      on-profile: qa
   datasource:
-    url: jdbc:postgresql://host_qa:5432/db_qa
-    username: user_qa
-    password: senha_qa
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-server:
-  port: 8081
-swagger:
-  api-docs-url: /swagger-ui.html
+    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
+    driver-class-name: org.postgresql.Driver
+  main:
+    allow-bean-definition-overriding: true
 
----
-
-spring:
-  config:
-    activate:
-      on-profile: prod
-  datasource:
-    url: jdbc:postgresql://host_prod:5432/db_prod
-    username: user_prod
-    password: senha_prod
-  jpa:
-    hibernate:
-      ddl-auto: validate
-    show-sql: false
 server:
   port: 8080
-swagger:
-  api-docs-url: /swagger-ui.html
