--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,7 +26,7 @@ spring:
     activate:
       on-profile: prod
   datasource:
-    url: jdbc:postgresql://${DB_HOST_PROD}:${DB_PORT_PROD}/defaultdb?sslmode=require
+    url: jdbc:postgresql://${DB_HOST_PROD}:${DB_PORT_PROD}/inter_vireya?sslmode=require
     username: ${DB_USER_PROD}
     password: ${DB_PASSWORD_PROD}
     driver-class-name: org.postgresql.Driver
