--- a/.env
+++ b/.env
@@ -4,9 +4,10 @@ DB_NAME=meubanco
 DB_USER=hydrocore
 DB_PASSWORD=segundoano
 
-DB_HOST_PROD=pg-304c4a7b-germinare-c6e2.g.aivencloud.com
-DB_PORT_PROD=17127
-DB_USER_PROD=avnadmin
-DB_PASSWORD_PROD=AVNS_gotL7zu94CmWXXBZbxw
+DB_HOST_PROD=ep-frosty-credit-ado7myta-pooler.c-2.us-east-1.aws.neon.tech
+DB_PORT_PROD=5432
+DB_DATABASE_PROD=inter_vireya
+DB_PASSWORD_PROD=npg_jYeKSLV1vE3q
+DB_USER_PROD=neondb_owner
 
 SPRING_PROFILES_ACTIVE=local
