--- a/.env
+++ b/.env
@@ -3,5 +3,8 @@ DB_PORT=5432
 DB_NAME=meubanco
 DB_USER=hydrocore
 DB_PASSWORD=segundoano
+REDIS_HOST=valkey-1db0b73f-germinare-c6e2.j.aivencloud.com
+REDIS_PORT=17128
+REDIS_PASSWORD=AVNS_5YHe6eyXOgLXubJ6PiC
 
 SPRING_PROFILES_ACTIVE=local
