--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,13 @@ spring:
     allow-bean-definition-overriding: true
   application:
     name: hydrocore
+  data:
+    redis:
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
+      password: ${REDIS_PASSWORD}
+      ssl:
+        enabled: true
 
 server:
   port: 8080
