--- a/.github/workflows/deploy-database.yml
+++ b/.github/workflows/deploy-database.yml
@@ -1,4 +1,4 @@
-name: Deploy to Production
+name: Verificar Deploy no Render
 
 on:
   push:
@@ -6,22 +6,22 @@ on:
       - main
 
 jobs:
-  deploy:
+  check-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout código
-        uses: actions/checkout@v3
-
-      - name: Configurar Docker
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login no DockerHub (opcional)
-        uses: docker/login-action@v2
+      - name: Checar se o serviço está no ar
+        uses: actions/http-client@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          url: https://hydrocore-api-prod.onrender.com/v1/health
+          method: GET
 
-      - name: Rodar docker-compose com perfil de produção
+      - name: Validar status
         run: |
-          docker compose --profile prod --env-file .env up -d --build
+          STATUS=$(curl -s -o /dev/null -w "%{http_code}" https://seu-app-render.onrender.com/health)
+          if [ "$STATUS" -ne 200 ]; then
+            echo "Deploy falhou! Status: $STATUS"
+            exit 1
+          else
+            echo "Deploy OK! Status: $STATUS"
+          fi
