adicionando notificação do firebase

--- a/.env
+++ b/.env
@@ -6,5 +6,6 @@ DB_PASSWORD=segundoano
 REDIS_HOST=valkey-1db0b73f-germinare-c6e2.j.aivencloud.com
 REDIS_PORT=17128
 REDIS_PASSWORD=AVNS_5YHe6eyXOgLXubJ6PiC
+FIREBASE_JSON=src/main/resources/hydrocore-ea8c1-firebase-adminsdk-fbsvc-c4f8220772.json
 
 SPRING_PROFILES_ACTIVE=local
