--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,12 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+### Arquivos de configuração ###
+.env
+*.env
+*.key
+*.pem
+firebase-service-account.json
+
 ### VS Code ###
 .vscode/
